--- a/app/src/main/res/layout/fragment_app_settings.xml
+++ b/app/src/main/res/layout/fragment_app_settings.xml
@@ -166,16 +166,45 @@
                 android:text="@string/app_settings_female" />
         </RadioGroup>
 
-        <TextView
-            android:id="@+id/app_settings_age_text"
+        <Button
+            android:id="@+id/app_settings_age"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="43dp"
+            android:background="@drawable/edit_round"
             android:fontFamily="@font/open_sans"
             android:layout_marginTop="20dp"
+            android:drawableStart="@drawable/drawable_date"
             android:text="@string/app_settings_age_text"
-            android:textColor="@color/colorPrimary"
-            android:textSize="24sp"
-            android:visibility="invisible" />
+            android:textSize="14sp"
+            android:padding="10dp"
+            android:drawablePadding="8dp"
+            android:textAlignment="viewStart"
+            android:backgroundTint="@color/colorWhiteGray"
+            android:textColorHint="@color/colorBlack"
+            android:textColor="@color/colorBlack"
+            android:visibility="gone" />
+
+        <EditText
+            android:id="@+id/app_settings_number"
+            android:layout_width="match_parent"
+            android:layout_height="43dp"
+            android:background="@drawable/edit_round"
+            android:layout_marginTop="20dp"
+            android:digits="0123456789"
+            android:drawableStart="@drawable/drawable_phone"
+            android:drawablePadding="8dp"
+            android:ems="10"
+            android:fontFamily="@font/open_sans"
+            android:hint="@string/app_settings_number_text"
+            android:inputType="number"
+            android:imeOptions="actionDone"
+            android:maxLength="15"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:backgroundTint="@color/colorWhiteGray"
+            android:textColorHint="@color/colorBlack"
+            android:textColor="@color/colorBlack"
+            android:textSize="14sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -184,7 +213,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="78dp"
+        android:layout_marginBottom="58dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
